force-app/main/default/objects/PricebookEntry/fields/Base_Type__c.field-meta.xml
<CustomField>
    <fullName>Base_Type__c</fullName>
    <formula>TEXT(Product2.Base_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Type</label>
    <type>Text</type>
</CustomField>