force-app/main/default/objects/PricebookEntry/fields/Opening_Closing__c.field-meta.xml
<CustomField>
    <fullName>Opening_Closing__c</fullName>
    <formula>TEXT( Product2.Opening_Closing__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opening/Closing</label>
    <type>Text</type>
</CustomField>