force-app/main/default/objects/PricebookEntry/fields/Val_Mar_Required__c.field-meta.xml
<CustomField>
    <fullName>Val_Mar_Required__c</fullName>
    <formula>Product2.Val_Mar_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Val Mar Required</label>
    <type>Checkbox</type>
</CustomField>